<resources>
    <string name="app_name">Shopline</string>
    <string name="title_activity_maps">MapsActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_msg_in_register">Hello, Are you new here ?</string>
    <string name="hint_msg_in_register">Use an account or register now, To enjoy more features</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="you_have_an_account">you have an account ! </string>
    <string name="log_in">LOG IN</string>
    <string name="register">register</string>
    <string name="total">TOTAL</string>
    <string name="checkout">CHECKOUT</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="orders">Orders</string>
    <string name="more">More</string>
    <string name="wishlist">Wishlist</string>
    <string name="login_required">Login Required</string>
    <string name="login_register_msg">You need to login to view your profile\nGo to setting to login or register</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_category">Categories</string>
    <string name="title_profile">Profile</string>
    <string name="title_settings">Settings</string>
    <string name="shipping_to">Shipping to:</string>
    <string name="ahmed_ali">Ahmed ALi</string>
    <string name="add_address">Add New Address</string>
    <string name="address">Address:</string>
    <string name="hello_welcome_back">Hello, Welcome back.</string>
    <string name="use_an_account_or_register_now_to_enjoy_more_features">Use an account or register now, To enjoy more features</string>
    <string name="login">Login</string>
    <string name="not_registered">Not registered</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="currency">Currency</string>
    <string name="aboutUs">This application is our graduation\n project, try to use this application and if you\n found any problem, please contact us or\n comment on google play to solve it and\n improve our service.</string>
    <string name="our_team">Ahmed Ali El-Sayed\n Esraa Sayed Ahmed\n Sara Nassrat\n Thoraya Hamdy Elsayed</string>
    <string name="dismiss">Dismiss</string>
    <string name="let_access_your_location">Let Access your location</string>
    <string name="no_access_location_msg">We need your permission in order to open\nmap and pick up your location or specify any\nother location you want.</string>
    <string name="phone">Phone</string>
    <string name="country">Country</string>
    <string name="confirm_add_address">Add Address</string>
    <string name="location_access">Location Access</string>
    <string name="enable">Enable</string>
    <string name="success_screen_title">Order Placed!</string>
    <string name="success_screen_msg">Your order was placed successfully. For more details, check All My Orders page under Profile tab</string>
    <string name="btn_in_success_screen">finish</string>
    <string name="ok">OK</string>
    <string name="shipping_address">SHIPPING ADDRESS</string>
    <string name="Checkout">Checkout</string>
    <string name="Shoppingcart">Shopping cart</string>
    <string name="payment_method">PAYMENT METHOD</string>
    <string name="fees">Fees</string>
    <string name="sub_total">Sub Total:</string>
    <string name="shipping_fees">Shipping Fees:</string>
    <string name="coupon">Coupon</string>
    <string name="enter_coupon_code">Enter Coupon Code</string>
    <string name="validate">Validate</string>
    <string name="discound">Discount:</string>
    <string name="grand_total">Grand Total</string>
    <string name="total_amount">Total Amount:</string>
    <string name="place_order">Place Order</string>
    <string name="back">Back</string>
    <string name="cant_be_empty">Can\'t be empty</string>
    <string name="OrderDetails">Order Details</string>
    <string name="cash_on_delivery_cod">Cash On Delivery (COD)</string>
    <string name="paypal">PayPal</string>
    <string name="Cash_on_delivery">Cash on delivery</string>
    <string name="city">City</string>
    <string name="add_address_btn">Add Address</string>
    <string name="_total">Total</string>
    <string name="error">Error</string>
    <string name="no_internet_access">No Internet Access</string>
    <string name="check_connection">Check your connection settings \n and try again</string>
    <string name="all">All</string>
    <string name="accessories">Accessories</string>
    <string name="t_shirts">T-Shirts</string>
    <string name="shoes">Shoes</string>
    <string name="products">Products</string>
    <string name="product_details">Product Details</string>
    <string name="EmailOrPasswordIsIncorrect">Email or password is incorrect</string>
    <string name="required">required</string>
    <string name="passwordWarning">passowrd should be at least 8 characters!</string>
    <string name="confirmPasswordWarning">should match password!</string>
    <string name="no_orders_found">No orders found</string>
    <string name="addressTitle">Address</string>
    <string name="no_addresses_found">No addresses found</string>
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="egp">EGP</string>
    <string name="doller">$</string>
    <string name="choose_your_currency">Choose your currency</string>
    <string name="todo">TODO</string>
    <string name="our_team_n">Our Team</string>
    <string name="eur">EUR</string>
    <string name="payment_Method">Payment Method</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="add_to_bag">Add To Cart</string>
    <string name="remove_from_bag">Remove From Cart</string>
    <string name="quantity">Quantity:</string>
    <string name="login_error">You need to login first!</string>
    <string name="register2">Register</string>
    <string name="sure_logout">Are you sure you want to logout?</string>
    <string name="enable_location">Enable Location</string>
    <string name="address2">Address</string>
    <string name="no_results_found">No results found</string>

    <string name="reviews">Reviews</string>
    <string name="phone_validation">invalid phone number</string>
    <string name="loginWarning">Login Required!</string>
    <string name="warning">Warning</string>
    <string name="inforamtion">Information</string>
    <string name="NotAValidCode">Not a valid code</string>
    <string name="The_code_has_been_added_successfully">The code has been added successfully</string>
    <string name="address_1">Address 1</string>
    <string name="address_2">Address 2</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="please_enter_a_valid_data">Please enter a valid data</string>
    <string name="address_error_msg">Is not a valid country, or this address already Exist, please try again</string>
    <string name="sure_for_delete">Are you sure you want to delete it?</string>
    <string name="hello">\"Hello, \"</string>
    <string name="about_us_image_description">About Us Image Description</string>
    <string name="contact_us_image">contact us image</string>
    <string name="email_shopify_gmail_com_phone_201234567891">email: shopify@gmail.com\nphone: +201234567891</string>
    <string name="address_image">address image</string>
    <string name="payment_image">payment image</string>
    <string name="no_login_image">no login image</string>
    <string name="delete_image">delete image</string>
    <string name="minus_image">minus image</string>
    <string name="_1">1</string>
    <string name="plus_image">plus image</string>
    <string name="favourite_image_btn">favourite image btn</string>
    <string name="country2">Country:</string>
    <string name="city2">City:</string>
    <string name="your_cart_is_empty">Your cart is empty</string>
    <string name="NoCountryFound">No country found</string>
    <string name="NoCityFound">No city found</string>
    <string name="NoAddressFound">No address found</string>
    <string name="empty_wishlist">Empty Wishlist</string>
    <string name="register_successfully">Registered Successfully</string>
    <string name="delete">remove</string>
    <string name="deleteWarning">Are you sure to remove this item from Wishlist?</string>
    <string name="deleteWarningCart">Are you sure to remove this item from Cart?</string>
</resources>