<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    android:layout_marginVertical="20dp"
    android:layout_marginHorizontal="20dp"
    app:cardCornerRadius="30dp"
    app:cardElevation="8dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/aboutus_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/ic_about"
            android:layout_marginTop="10dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:text="@string/about_us"
            android:textSize="20sp"
            android:fontFamily="@font/cairo_extra_bold"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/aboutus_image"/>
        <TextView
            android:id="@+id/aboutus_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/aboutUs"
            android:textSize="15sp"
            android:gravity="center_horizontal"
            android:fontFamily="@font/cairo_regular"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/text"/>

        <TextView
            android:id="@+id/team_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/our_team"
            android:textSize="15sp"
            android:gravity="center_horizontal"
            android:fontFamily="@font/cairo_regular"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/aboutus_text"/>

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/dismiss"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_rectangle"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/team_text"/>
    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>