<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.success.SuccessFragment"
    android:background="@color/light_gray">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_success"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/success_screen_title"
            android:textColor="@color/dark_blue"
            android:layout_gravity="center"
            android:textSize="30sp"
            android:fontFamily="@font/cairo_semi_bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/success_screen_msg"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textColor="@color/dark_blue"
            android:textSize="19sp"/>

        <Button
            android:id="@+id/finishBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            android:background="@drawable/rounded_corners"
            app:backgroundTint="@color/main_color"
            android:text="@string/btn_in_success_screen"
            android:drawableEnd="@drawable/ic_group_right_arrow"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>